fix add post issue with createdDate, fix edit post, add delete method
